--- a/templates/skel.html
+++ b/templates/skel.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
   {# this must be a 192px square PNG #}
   {# <link rel="apple-touch-icon" href="/favicon.svg" /> #}
-  <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/main.css" />
   <link rel="manifest" href="/manifest.json" />
 </head>
