--- a/templates/skel.html
+++ b/templates/skel.html
@@ -20,7 +20,7 @@
     {% block content %}{% endblock %}
   </main>
   <footer class="text-xs italic">
-    © YEAR AUTHOR - <a href="https://github.com/deciduously/" target="_blank"
+    © YEAR AUTHOR - <a href="https://github.com/deciduously/hyper-template" target="_blank"
       rel="noreferrer">source</a>
   </footer>
 </body>
